[package]
name = "a-caht"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
log = "0.4.8"
async-std = "0.99.6"
futures-preview = { version = "0.3.0-alpha.18", features = [ "async-await", "nightly" ] }
env_logger = "0.6.2"
